--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -1,6 +1,9 @@
 name: Rename the project from template
 
-on: [push]
+on: 
+  # [push]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   rename-project:
