Update github credentials in rename_project.yml

--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -15,6 +15,7 @@ jobs:
           # by default, it uses a depth of 1
           # this fetches all history so that we can read each commit
           fetch-depth: 0
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
           ref: ${{ github.head_ref }}
           
       - run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}' | tr '-' '_' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
